crates/core/tests/ui/typed_macro/fail/struct_shape_type_mismatch_params.stderr
error[E0308]: mismatched types
  --> tests/ui/typed_macro/fail/struct_shape_type_mismatch_params.rs:11:38
   |
11 |       let _command: Command<NewUser> = babar::command!(
   |  ______________________________________^
12 | |         schema = {
13 | |             table public.users {
14 | |                 id: int4,
...  |
20 | |         INSERT INTO users (id, name, active) VALUES ($id, $name, $active)
21 | |     );
   | |     ^
   | |     |
   | |_____expected `&i32`, found `&String`
   |       arguments to this function are incorrect
   |
   = note: expected reference `&i32`
              found reference `&String`
note: method defined here
  --> src/codec/mod.rs
   |
   |     fn encode(&self, value: &A, params: &mut Vec<Option<Vec<u8>>>) -> Result<()>;
   |        ^^^^^^
   = note: this error originates in the macro `babar::command` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/typed_macro/fail/struct_shape_type_mismatch_params.rs:11:38
   |
11 |       let _command: Command<NewUser> = babar::command!(
   |  ______________________________________^
12 | |         schema = {
13 | |             table public.users {
14 | |                 id: int4,
...  |
20 | |         INSERT INTO users (id, name, active) VALUES ($id, $name, $active)
21 | |     );
   | |     ^
   | |     |
   | |_____expected `&bool`, found `&Option<bool>`
   |       arguments to this function are incorrect
   |
   = note: expected reference `&bool`
              found reference `&Option<bool>`
note: method defined here
  --> src/codec/mod.rs
   |
   |     fn encode(&self, value: &A, params: &mut Vec<Option<Vec<u8>>>) -> Result<()>;
   |        ^^^^^^
   = note: this error originates in the macro `babar::command` (in Nightly builds, run with -Z macro-backtrace for more info)
